--- a/package.json
+++ b/package.json
@@ -7,12 +7,8 @@
   "dependencies": {
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.0",
     "uuid": "8.3.2"
-  },
-  "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
